force-app/main/default/objects/Carrier_Code__c/Carrier_Code__c.object-meta.xml
<CustomObject>
    <customHelpPage>page_CarrierCodeOnlineHelp</customHelpPage>
    <description>Carrier Code</description>
    <label>CARRIER/AIRLINER CODE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>