force-app/main/default/objects/Carrier_Code__c/fields/Airliner_Code__c.field-meta.xml
<CustomField>
    <fullName>Airliner_Code__c</fullName>
    <label>Airliner Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>