force-app/main/default/objects/Carrier_Code__c/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <inlineHelpText>This code of Liner/Airliner includes both number and letter (2-4).</inlineHelpText>
    <label>Carrier Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>