force-app/main/default/objects/Carrier_Code__c/fields/CarrierAirlinerClass__c.field-meta.xml
<CustomField>
    <fullName>CarrierAirlinerClass__c</fullName>
    <label>CARRIER/AIRLINER CLASSIFICATION</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CarrierAirlinerClass</valueSetName>
    </valueSet>
</CustomField>