force-app/main/default/objects/Carrier_Code__c/listViews/Carrier_Name_Search.listView-meta.xml
<ListView>
    <fullName>Carrier_Name_Search</fullName>
    <columns>Company_Name__c</columns>
    <columns>NAME</columns>
    <columns>Carrier_Code__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company_Name__c</field>
        <operation>contains</operation>
        <value>FESCO</value>
    </filters>
    <label>Carrier Name Search</label>
    <language>en_US</language>
</ListView>