force-app/main/default/objects/Carrier_Code__c/listViews/NewAll.listView-meta.xml
<ListView>
    <fullName>NewAll</fullName>
    <columns>NAME</columns>
    <columns>Carrier_Code__c</columns>
    <columns>Company_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CarrierAirlinerClass__c</field>
        <operation>equals</operation>
        <value>Airliner</value>
    </filters>
    <label>All</label>
</ListView>